--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:textSize="18sp"
         android:textColor="#0000FF" />
 
-<!--   두번째 텍스트뷰. 빨간색, 텍스트크기 : 16sp -->
+    <!--   두번째 텍스트뷰. 빨간색, 텍스트크기 : 16sp -->
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,7 +23,7 @@
         android:textColor="#FF0000"
         android:textSize="16sp" />
 
-<!--    세번째, 네번째 텍스트뷰.  이둘은 가로배치.-->
+    <!--    세번째, 네번째 텍스트뷰.  이둘은 가로배치.-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,4 +43,58 @@
 
     </LinearLayout>
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="아이디" />
+
+    <EditText
+        android:hint="이메일 양식으로 입력해주세요."
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="비밀번호" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="비밀번호를 입력하세요."
+        android:inputType="textPassword"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="전화번호" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="전화번호를 입력하세요."
+        android:textColorHint="#FF0000"
+        android:inputType="phone"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="닉네임 검색"
+        android:singleLine="true"
+        android:text="cho881020"
+        android:textColor="#FF0000"
+        android:imeOptions="actionSearch"/>
+
 </LinearLayout>
+
+
+
+
+
+
+
+
+
+
